@@ -3668,6 +3668,15 @@ final class CurlShareHandle
 {
 }
 
+/**
+ * @strict-properties
+ * @not-serializable
+ */
+final class CurlSharePersistentHandle
+{
+    public readonly array $options;
+}
+
 function curl_close(CurlHandle $handle): void {}
 
 /** @refcount 1 */
@@ -3749,6 +3758,9 @@ function curl_share_setopt(CurlShareHandle $share_handle, int $option, mixed $va
 
 /** @refcount 1 */
 function curl_share_strerror(int $error_code): ?string {}
+
+/** @refcount 1 */
+function curl_share_init_persistent(array $share_options): CurlSharePersistentHandle {}
 
 /** @refcount 1 */
 function curl_strerror(int $error_code): ?string {}
