@@ -21,6 +21,7 @@
 #endif
 
 #include "php.h"
+#include "Zend/zend_exceptions.h"
 
 #include "curl_private.h"
 
@@ -134,6 +135,151 @@ PHP_FUNCTION(curl_share_strerror)
 }
 /* }}} */
 
+/**
+ * Initialize a persistent curl share handle with the given share options, reusing an existing one if found.
+ *
+ * Throws an exception if the share options are invalid.
+ */
+PHP_FUNCTION(curl_share_init_persistent)
+{
+	// Options specified by the user.
+	HashTable *share_opts = NULL;
+
+	// De-duplicated and sorted options.
+	zval share_opts_prop;
+	ZVAL_UNDEF(&share_opts_prop);
+
+	// An ID representing the unique set of options specified by the user.
+	zend_ulong persistent_id = 0;
+
+	php_curlsh *sh = NULL;
+
+	ZEND_PARSE_PARAMETERS_START(1, 1)
+		Z_PARAM_ARRAY_HT(share_opts)
+	ZEND_PARSE_PARAMETERS_END();
+
+	if (zend_hash_num_elements(share_opts) == 0) {
+		zend_argument_must_not_be_empty_error(1);
+		goto error;
+	}
+
+	ZEND_HASH_FOREACH_VAL(share_opts, zval *entry) {
+		ZVAL_DEREF(entry);
+
+		bool failed = false;
+		zend_ulong option = zval_try_get_long(entry, &failed);
+
+		if (failed) {
+			zend_argument_type_error(1, "must contain only int values, %s given", zend_zval_value_name(entry));
+			goto error;
+		}
+
+		switch (option) {
+			// Disallowed options
+			case CURL_LOCK_DATA_COOKIE:
+				zend_argument_value_error(1, "must not contain CURL_LOCK_DATA_COOKIE because sharing cookies across PHP requests is unsafe");
+				goto error;
+
+			// Allowed options
+			case CURL_LOCK_DATA_DNS:
+				persistent_id |= 1 << 0;
+				break;
+			case CURL_LOCK_DATA_SSL_SESSION:
+				persistent_id |= 1 << 1;
+				break;
+			case CURL_LOCK_DATA_CONNECT:
+				persistent_id |= 1 << 2;
+				break;
+			case CURL_LOCK_DATA_PSL:
+				persistent_id |= 1 << 3;
+				break;
+
+			// Unknown options
+			default:
+				zend_argument_value_error(1, "must contain only CURL_LOCK_DATA_* constants");
+				goto error;
+		}
+	} ZEND_HASH_FOREACH_END();
+
+	// We're now decently confident that we'll be returning a CurlSharePersistentHandle object, so we construct it here.
+	object_init_ex(return_value, curl_share_persistent_ce);
+
+	// Next we initialize a property field for the CurlSharePersistentHandle object with the enabled share options.
+	array_init(&share_opts_prop);
+
+	if (persistent_id & (1 << 0)) {
+		add_next_index_long(&share_opts_prop, CURL_LOCK_DATA_DNS);
+	}
+
+	if (persistent_id & (1 << 1)) {
+		add_next_index_long(&share_opts_prop, CURL_LOCK_DATA_SSL_SESSION);
+	}
+
+	if (persistent_id & (1 << 2)) {
+		add_next_index_long(&share_opts_prop, CURL_LOCK_DATA_CONNECT);
+	}
+
+	if (persistent_id & (1 << 3)) {
+		add_next_index_long(&share_opts_prop, CURL_LOCK_DATA_PSL);
+	}
+
+	zend_update_property(curl_share_persistent_ce, Z_OBJ_P(return_value), ZEND_STRL("options"), &share_opts_prop);
+
+	sh = Z_CURL_SHARE_P(return_value);
+
+	// If we are able to find an existing persistent share handle, we can use it and return early.
+	zval *persisted = zend_hash_index_find(&CURL_G(persistent_curlsh), persistent_id);
+
+	if (persisted) {
+		sh->share = Z_PTR_P(persisted);
+
+		goto cleanup;
+	}
+
+	// We could not find an existing share handle, so we'll have to create one.
+	sh->share = curl_share_init();
+
+	// Apply the options property to the handle. We avoid using $share_opts as zval_get_long may not necessarily return
+	// the same value as it did in the initial ZEND_HASH_FOREACH_VAL above.
+	ZEND_HASH_PACKED_FOREACH_VAL(Z_ARRVAL_P(&share_opts_prop), zval *entry) {
+		CURLSHcode curlsh_error = curl_share_setopt(sh->share, CURLSHOPT_SHARE, Z_LVAL_P(entry));
+
+		if (curlsh_error != CURLSHE_OK) {
+			zend_throw_exception_ex(NULL, 0, "Could not construct persistent cURL share handle: %s", curl_share_strerror(curlsh_error));
+
+			goto error;
+		}
+	} ZEND_HASH_FOREACH_END();
+
+	zend_hash_index_add_new_ptr(&CURL_G(persistent_curlsh),	persistent_id, sh->share);
+
+ cleanup:
+	zval_ptr_dtor(&share_opts_prop);
+
+	return;
+
+ error:
+	if (sh) {
+		curl_share_cleanup(sh->share);
+	}
+
+	zval_ptr_dtor(&share_opts_prop);
+
+	RETURN_THROWS();
+}
+
+/**
+ * Free a persistent curl share handle from the module global HashTable.
+ *
+ * See PHP_GINIT_FUNCTION in ext/curl/interface.c.
+ */
+void curl_share_free_persistent_curlsh(zval *data)
+{
+	CURLSH *handle = Z_PTR_P(data);
+
+	curl_share_cleanup(handle);
+}
+
 /* CurlShareHandle class */
 
 static zend_object *curl_share_create_object(zend_class_entry *class_type) {
@@ -170,4 +316,24 @@ void curl_share_register_handlers(void) {
 	curl_share_handlers.get_constructor = curl_share_get_constructor;
 	curl_share_handlers.clone_obj = NULL;
 	curl_share_handlers.compare = zend_objects_not_comparable;
+}
+
+/* CurlSharePersistentHandle class */
+
+static zend_object_handlers curl_share_persistent_handlers;
+
+static zend_function *curl_share_persistent_get_constructor(zend_object *object) {
+	zend_throw_error(NULL, "Cannot directly construct CurlSharePersistentHandle, use curl_share_init_persistent() instead");
+	return NULL;
+}
+
+void curl_share_persistent_register_handlers(void) {
+	curl_share_persistent_ce->create_object = curl_share_create_object;
+	curl_share_persistent_ce->default_object_handlers = &curl_share_persistent_handlers;
+
+	memcpy(&curl_share_persistent_handlers, &std_object_handlers, sizeof(zend_object_handlers));
+	curl_share_persistent_handlers.offset = XtOffsetOf(php_curlsh, std);
+	curl_share_persistent_handlers.get_constructor = curl_share_persistent_get_constructor;
+	curl_share_persistent_handlers.clone_obj = NULL;
+	curl_share_persistent_handlers.compare = zend_objects_not_comparable;
 }
